update servlet script

--- a/java/서블릿.md
+++ b/java/서블릿.md
@@ -1,4 +1,44 @@
 ## Q. 서블릿이란 무엇인가?
-* 서블릿은 HTTP 요청을 어떻게 받고, 받은 요청을 이용해 비즈니스 로직을 수행한 결과를 어떻게 HTTP 응답으로 내려주는지에 대해 구현한 자바 객체입니다.
+* 서블릿은 client로 부터 받은 HTTP 요청 데이터를 이용해 비즈니스 로직을 수행하고 동적으로 response 객체를 만들어 반환하는 자바 객체입니다.
 * 서블릿은 서블릿 컨테이너에 의해서 생성, 호출, 관리 됩니다.
 * 대표적인 서블릿 컨테이너로는 Apache Tomcat이 있습니다.
+
+## Q. 서블릿 컨테이너의 역할, 동작과정?
+* Web Application Server, 줄여서 WAS라고도 부릅니다.
+* 서블릿 객체의 생명주기를 관리합니다.
+* TCP/IP 연결 소캣을 생성하고 client와의 connection을 기다립니다. client와의 connection이 생성되면 HTTP 요청 메시지를 받아 요청을 처리하고,
+  client로의 응답이 완료되면 connection을 해제합니다.
+* HTTP 요청 메세지를 파싱해서 읽습니다.
+* 파싱한 HTTP 요청 메세지의 start line에서 http method와 URL을 인식합니다.
+* Content-Type 정보를 확인합니다.
+* HTTP 메세지의 body의 내용을 파싱합니다.
+* client의 요청당 1개의 쓰레드를 할당하고, 해당 쓰레드는 HTTP 요청 메세지를 기반으로 만들어진 Request, Response 객체를 이용해 Servlet 객체를 호출합니다.
+* HTTP 요청마다 별도의 쓰레드를 할당해주며, 여러 요청에 대한 멀티 쓰레드 동시 처리를 지원합니다.
+* Servlet 객체는 애플리케이션의 최초 로딩 시점에 생성되어 싱글톤으로 관리됩니다. 또한 Servlet 컨테이너 종료 시 Servlet도 같이 종료됩니다.
+* servlet으로 부터 반환된 response 객체를 이용해 HTTP 응답 메시지를 생성합니다.
+* 즉, 서블릿 컨테이너는 HTTP 요청 시 수행되어야 할 비즈니스 로직은 서블릿을 통해 실행시키고, 나머지 서버에서 처리해야 할 반복적인 업무들을 수행합니다.
+
+## Q. 쓰레드와 쓰레드 풀
+* 쓰레드를 생성하는 작업은 CPU를 많이 사용하는 상대적으로 많은 cost를 유발하는 작업입니다.
+* 그렇기 때문에, client의 요청이 올때마다 쓰레드를 생성한다면 응답속도가 느려질 수 있습니다.
+* 그렇기 때문에 톰캣과 같은 WAS에서는 애플리케이션 로딩 시 쓰레드를 미리 생성해놓고 쓰레드 풀에서 관리합니다.
+* 이렇게 하면, 쓰레드 생성 비용을 아낄 수 있고, 응답속도를 빠르게 할 수 있습니다.
+* 다만, 너무 많은 쓰레드를 쓰레드 풀에서 관리했을 경우 리소스를 효율적으로 사용하지 못하는 상황이 발생할 수 있으므로,
+  쓰레드 풀에서 관리할 쓰레드의 갯수는 애플리케이션의 상황에 맞게 적절한 값으로 세팅하는 것이 중요합니다.
+
+## Q. MVC란?
+* 하나의 서블릿이나 JSP만으로 비즈니스 로직과 뷰를 렌더링하는 작업까지 모두 처리하면, 너무 많은 역할을 하게되어, 결과적으로 유지보수가 어려워 질 것입니다.
+* 일반적으로 UI 일부를 수정하는 작업과 비즈니스 로직을 수정하는 작업은 각각 다른 라이프사이클을 가질 가능성이 높기 때문입니다.
+* 그렇기 때문에, 하나의 서블릿이나 JSP에서 처리하던 모든 작업들을 각각의 역할의 따라 나눌 필요가 있었고, 이를 적용한 것이 바로 MVC입니다.
+* MVC는 Model, View, Controller의 약자로써 전체 작업을 역할에 따라 나누는 방식을 의미합니다.
+* Controller는 HTTP 요청을 받은 파라미터를 검증하고, 비즈니스 로직을 호출합니다. 즉, 뷰와 비즈니스 로직간의 중재자 역할을 수행합니다.
+* Model은 뷰에 출력할 데이터를 담아두는 역할을 수행합니다. 뷰가 필요한 데이터를 모두 모델에 담아서 전달해주기 때문에, 뷰는 비즈니스 로직이나 데이터 접근 로직에 대해 알 필요가 없으며,
+  화면을 렌더링하는 일에 집중할 수 있습니다.
+* View는 모델에 담겨있는 데이터를 사용해서 화면을 렌더링하는 작업을 수행합니다.
+
+## Q. front controller 패턴
+* Controller를 servlet으로 구현하다보니 불가피하게 공통적이면서 반복적으로 수행시켜야하는 코드들이 존재합니다.
+* 가령, 사용할 지 안할 지 모르는 Request 객체를 매번 파라미터로 추가시켜야 하며, controller에서 view로 forward 시키는 부분에서 매번 중복이 발생합니다.
+* 이러한 공통 코드들을 하나로 모으기 위한 것이 front controller이며, front controller는 servlet으로 구현됩니다.
+* 그렇기 때문에, front controller에서 client 요청에 매핑되는 controller를 호출 한다면, front controller를 제외한 나머지 controller들은 servlet을 사용할 필요가 없습니다.
+* 이렇게 하면 구현 코드도 단순해지고, controller에 대한 테스트 코드를 작성하기도 수월해 집니다.
