--- a/java/서블릿.md
+++ b/java/서블릿.md
@@ -42,3 +42,12 @@
 * 이러한 공통 코드들을 하나로 모으기 위한 것이 front controller이며, front controller는 servlet으로 구현됩니다.
 * 그렇기 때문에, front controller에서 client 요청에 매핑되는 controller를 호출 한다면, front controller를 제외한 나머지 controller들은 servlet을 사용할 필요가 없습니다.
 * 이렇게 하면 구현 코드도 단순해지고, controller에 대한 테스트 코드를 작성하기도 수월해 집니다.
+
+## Q. Spring MVC의 동작과정?
+* 먼저, front controller인 dispatcher servlet에서 핸들러 매핑을 통해 client의 요청 URL에 매핑된 핸들러(컨트롤러)를 조회합니다.
+* 이를 통해 얻은 핸들러를 이용해 핸들러를 실행할 수 있는 핸들러 어댑터를 조회합니다.
+* 핸들러 어댑터를 통해 실제 핸들러를 실행합니다.
+* 핸들러 어댑터는 실제 핸들러가 반환한 response 데이터를 ModelAndView 객체로 변환해서 dispatcher servlet으로 반환합니다.
+* dispatcher servlet은 viewResolver를 호출하고 viewResolver는 뷰의 논리이름을 이용해 실제 뷰를 찾고, 뷰를 렌더링하는 역할을 담당하는 뷰 객체를 반환합니다.
+* 뷰 객체를 이용해서 뷰를 랜더링합니다.
+* 랜더링된 뷰 객체를 client로 전송합니다.
