update servlet script

--- a/java/서블릿.md
+++ b/java/서블릿.md
@@ -51,3 +51,12 @@
 * dispatcher servlet은 viewResolver를 호출하고 viewResolver는 뷰의 논리이름을 이용해 실제 뷰를 찾고, 뷰를 렌더링하는 역할을 담당하는 뷰 객체를 반환합니다.
 * 뷰 객체를 이용해서 뷰를 랜더링합니다.
 * 랜더링된 뷰 객체를 client로 전송합니다.
+
+## Q. Cookie
+* HTTP는 stateless한 프로토콜이기 때문에 client와 server는 서로 어떠한 상태도 유지하지 않습니다.
+* 즉, 클라이언트에서 이전과 동일한 요청을 다시 요청하더라도 서버는 이전 요청을 기억하지 못합니다.
+* 이러한 HTTP의 한계를 극복하기 위한 기술이 Cookie입니다.
+* Cookie는 서버와의 연결에 대한 상태를 보관하기 위해 웹 브라우저에서 사용하는 키와 값 형태의 데이터입니다.
+* 어떤 client에서 server로 첫 요청을 보내면, server에서는 HTTP response message로 Set-Cookie라는 속성을 포함해서 clien에게 응답합니다.
+* client는 Set-Cookie 속성의 값을 꺼내서 브라우저에 저장하고, expired time이 유효할 때까지 유지됩니다.
+* 이후의 요청부터 브라우저에 저장된 쿠키를 꺼내서 HTTP request message header의 Cookie라는 속성에 쿠키를 포함시켜 전송합니다.
